Add top-nav to app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
 <tui-root>
-  <router-outlet></router-outlet>
+  <!-- Top navbar -->
+  <app-top-navbar></app-top-navbar>
+
+  <!-- Main content -->
+  <main tuiNavigationMain>
+  </main>
 </tui-root>
