Update next-prayer-info component HTML and LESS files

--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
@@ -1,11 +1,21 @@
 <div class="container">
   <tui-island size="m" class="t-island">
     <div class="tui-island__content">
-        <div>
-          <h3 class="tui-island__title">Waktu Seterusnya</h3>
-          <div class="tui-island__paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                et dolore magna aliqua
+        <div class="content-container">
+          <div class="next-prayer-section">
+            <p class="tui-island__paragraph next-prayer-lbl">Waktu seterusnya</p>
+            <h3 class="tui-island__title next-prayer-title">Zohor</h3>
+            <p class="tui-island__paragraph next-prayer-lbl-sec">
+              17 Ramadhan 1445H / 28 Mac 2024
+            </p>
+            <p class="tui-island__paragraph next-prayer-lbl-sec">
+              1 jam 30 saat lagi
+            </p>
+          </div>
+          <hr>
+          <div class="current-zone-section">
+            <p class="tui-island__paragraph current-zone-lbl">Zon semasa</p>
+            <p class="tui-island__title current-zone-lbl-sec">Kuala Lumpur</p>
           </div>
           <button
               appearance="primary"
@@ -14,7 +24,7 @@
               type="button"
               class="tui-island__footer-button"
           >
-              Tukar Zon Waktu
+              Tukar Zon Semasa
           </button>
         </div>
     </div>
