--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.less
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.less
@@ -9,7 +9,39 @@
   width: fit-content;
 }
 
-.title {
-  margin-top: 0rem;
-  margin-left: 0.3rem;
+.content-container {
+  width: 80vw
 }
+
+.next-prayer-title {
+  font-size: 2rem;
+}
+
+.next-prayer-lbl,
+.current-zone-lbl {
+  font-weight: 700;
+}
+
+.next-prayer-title,
+.next-prayer-lbl,
+.current-zone-lbl {
+  margin-bottom: 0.8rem;
+}
+
+.next-prayer-lbl-sec {
+  font-size: 0.95rem;
+}
+
+.next-prayer-section,
+.current-zone-section {
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  margin-bottom: 0.8rem;
+}
+
+.current-zone-section {
+  margin-top: 0.8rem;
+}
+
+
