--- a/src/app/shared/menu/top-navbar/top-navbar.component.html
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.html
@@ -3,7 +3,7 @@
     <span class="t-content">
       <span class="t-logo-name tui-text_h3">
         <img src="../../../../assets/mosque-logo.svg" alt="Logo" class="t-logo-img">
-        Solatku
+        <!-- Solatku -->
       </span>
     </span>
   </a>
