Draft fetching data from the server

--- a/src/app/pages/prayer-time-base/prayer-time-base.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-base.component.html
@@ -1,3 +1,7 @@
 
-<app-next-prayer-info></app-next-prayer-info>
+<app-next-prayer-info
+  [zone]="chosenZone"
+  [district]="chosenDist"
+>
+</app-next-prayer-info>
 
