Update property binding on prayer-time-base.component.html

--- a/src/app/pages/prayer-time-base/prayer-time-base.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-base.component.html
@@ -1,7 +1,7 @@
 
 <app-next-prayer-info
-  [zone]="chosenZone"
-  [district]="chosenDist"
->
+  [prayerTimes]="todayPrayerTimes"
+  [monthlyTimes]="monthlyData"
+  >
 </app-next-prayer-info>
 
