Update TodayPrayerInfoComponent HTML template and styles

--- a/src/app/pages/prayer-time-base/today-prayer-info/today-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/today-prayer-info/today-prayer-info.component.html
@@ -1,1 +1,6 @@
-<p>today-prayer-info works!</p>
+<div class="container">
+  <tui-island size="m" class="t-island">
+    <div class="tui-island__content">
+    </div>
+  </tui-island>
+</div>
