Update notification component HTML and styles to use section instead of div container

--- a/src/app/shared/notification/notification.component.html
+++ b/src/app/shared/notification/notification.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<section class="container">
   <tui-island [size]="size" class="t-island">
     <div class="tui-island__content">
       <div class="content-container">
@@ -11,4 +11,4 @@
       </div>
     </div>
   </tui-island>
-</div>
+</section>
