Update PrayerTimeBaseComponent to include PrayerTimeTable component

--- a/src/app/pages/prayer-time-base/prayer-time-base.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-base.component.html
@@ -1,13 +1,18 @@
 
-<ng-template [ngIf]="todayPrayerTimes">
+<ng-template [ngIf]="todayPrayerTimes && monthlyData">
   <app-next-prayer-info
     [prayerTimes]="todayPrayerTimes"
     [monthlyTimes]="monthlyData"
     >
   </app-next-prayer-info>
+  <app-prayer-time-table
+    [prayerTimes]="todayPrayerTimes"
+    [monthlyTimes]="monthlyData"
+  >
+  </app-prayer-time-table>
 </ng-template>
 
-<ng-template [ngIf]="!todayPrayerTimes">
+<ng-template [ngIf]="!todayPrayerTimes || !monthlyData">
   <app-notification
     [title]="errorTitle"
     [message]="errorMessage"
