Draft zone switcher dialog

--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
@@ -21,8 +21,11 @@
             appearance="primary"
             size="m"
             tuiButton
+            tuiHint="Tukar Zon Semasa"
+            tuiHintDirection="bottom"
             type="button"
             class="tui-island__footer-button"
+            (click)="openDialog()"
         >
             Tukar Zon Semasa
         </button>
