--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
@@ -4,12 +4,12 @@
       <div  class="content-container">
         <div class="next-prayer-section">
           <p class="tui-island__paragraph next-prayer-lbl">Waktu seterusnya</p>
-          <h3 class="tui-island__title next-prayer-title">{{ nextPrayerName }}</h3>
+          <h3 class="tui-island__title next-prayer-title">{{ nextPrayer.name }}</h3>
           <p class="tui-island__paragraph next-prayer-lbl-sec">
             {{ getTodayHijriDate(prayerTimes.hijri) }} / {{ getTodaysDate() | date: 'dd MMM yyyy' }}
           </p>
           <div class="tui-island__paragraph next-prayer-lbl-sec">
-              <span>{{ nextPrayerInSeconds | countdown | async }}</span>
+              <span>{{ nextPrayer.inSeconds | countdown | async }}</span>
           </div>
         </div>
         <hr>
