Refactor prayer-time-base.component.html to use app-next-prayer-info and app-prayer-time-table components without passing any input properties

--- a/src/app/pages/prayer-time-base/prayer-time-base.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-base.component.html
@@ -1,14 +1,8 @@
 
 <ng-template [ngIf]="todayPrayerTimes && monthlyData">
-  <app-next-prayer-info
-    [prayerTimes]="todayPrayerTimes"
-    [monthlyTimes]="monthlyData"
-    >
+  <app-next-prayer-info>
   </app-next-prayer-info>
-  <app-prayer-time-table
-    [prayerTimes]="todayPrayerTimes"
-    [monthlyTimes]="monthlyData"
-  >
+  <app-prayer-time-table>
   </app-prayer-time-table>
 </ng-template>
 
