Refactor NextPrayerInfoComponent to use nextPrayerInSeconds$ Subject

--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
@@ -1,4 +1,4 @@
-<section class="container" *ngIf="prayerTimes; else noData">
+<section class="container" *ngIf="nextPrayer; else noData">
   <tui-island size="m" class="t-island">
     <div class="tui-island__content">
       <div  class="content-container">
