--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
@@ -1,4 +1,4 @@
-<section class="container" *ngIf="prayerTimes; else noData">
+<section class="container" *ngIf="prayerInfo; else noData">
   <table class="tui-table">
     <tbody>
       <tr class="tui-table__tr" *ngFor="let prayer of prayerInfo">
