--- a/src/app/shared/dialogs/zone-switcher/zone-switcher.component.html
+++ b/src/app/shared/dialogs/zone-switcher/zone-switcher.component.html
@@ -1,10 +1,10 @@
 	<tui-select
-    tuiTextfieldSize="m"
+    [tuiTextfieldSize]="size"
     class="tui-space_top-3 tui-space_bottom-5"
     [tuiTextfieldLabelOutside]="true"
     [(ngModel)]="value"
 >
-    Select a sum
+    {{ placeholder }}
     <tui-data-list-wrapper
         *tuiDataList
         [items]="items"
