Update NextPrayerInfoComponent to include zone switcher dialog and zone data retrieval

--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
@@ -21,13 +21,13 @@
             appearance="primary"
             size="m"
             tuiButton
-            tuiHint="Tukar Zon Semasa"
+            tuiHint="Tukar Zon"
             tuiHintDirection="bottom"
             type="button"
             class="tui-island__footer-button"
             (click)="openDialog()"
         >
-            Tukar Zon Semasa
+            Tukar Zon
         </button>
       </div>
     </div>
