Center the prayertime table and nextprayer info dynamically

--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.less
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.less
@@ -10,7 +10,7 @@
 }
 
 .content-container {
-  width: 80vw
+  width: 50vw;
 }
 
 .next-prayer-title {
@@ -42,5 +42,16 @@
 
 .current-zone-section {
   margin-top: 0.8rem;
+}
+
+/* For smaller screen */
+@media (max-width: 991px) {
+  .container {
+    margin-top: 1rem;
+  }
+
+  .content-container {
+    width: 85vw;
+  }
 }
 
