--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
@@ -6,5 +6,21 @@
 }
 
 .tui-table {
-  width: 80vw;
+  width: 50vw;
+}
+
+/* For PC and laptop screen */
+@media (min-width: 992px) {
+  table {
+    margin-left: 150px;
+  }
+}
+
+/* For smaller screen */
+@media (max-width: 991px) {
+  .tui-table {
+    width: 90vw;
+    margin-left: 34px;
+    margin-right: auto;
+  }
 }
