Update prayer-time-table.component.less to style the table rows with background color and border radius

--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
@@ -9,6 +9,11 @@
   width: 50vw;
 }
 
+table tr:nth-child(even) {
+  background-color: #dfdfdf;
+  border-radius: 50px;
+}
+
 /* For PC and laptop screen */
 @media (min-width: 992px) {
   table {
@@ -19,8 +24,6 @@
 /* For smaller screen */
 @media (max-width: 991px) {
   .tui-table {
-    width: 90vw;
-    margin-left: 34px;
-    margin-right: auto;
+    width: 85vw;
   }
 }
