- Update label position for prayer info - Change font size for prayer info

--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.less
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.less
@@ -14,22 +14,17 @@
 }
 
 .next-prayer-title {
-  font-size: 2rem;
+  margin-bottom: 0.2rem;
+  margin-top: 0;
 }
 
-.next-prayer-lbl,
-.current-zone-lbl {
-  font-weight: 700;
+.paragraph-lbl {
+  margin-bottom: 0.3rem;
 }
 
-.next-prayer-title,
-.next-prayer-lbl,
-.current-zone-lbl {
-  margin-bottom: 0.8rem;
-}
-
-.next-prayer-lbl-sec {
-  font-size: 0.95rem;
+.countdown-lbl {
+  margin-top: 0.2rem;
+  font-weight: 800;
 }
 
 .next-prayer-section,
