--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
@@ -3,19 +3,15 @@
     <div class="tui-island__content">
       <div  class="content-container">
         <div class="next-prayer-section">
-          <p class="tui-island__paragraph next-prayer-lbl">Waktu seterusnya</p>
-          <h3 class="tui-island__title next-prayer-title">{{ nextPrayer.name }}</h3>
-          <p class="tui-island__paragraph next-prayer-lbl-sec">
-            {{ nextPrayer.hijriDate }} / {{ nextPrayer.time | date: 'dd MMM yyyy' }}
+          <p class="tui-island__paragraph tui-text_body-l-2">Waktu seterusnya</p>
+          <h3 class="tui-text_h3 next-prayer-title">{{ nextPrayer.name }}</h3>
+          <p class="tui-island__paragraph tui-text_body-s paragraph-lbl">{{ nextPrayer.district | titlecase }}</p>
+          <p class="tui-island__paragraph tui-text_body-s paragraph-lbl">
+            {{ nextPrayer.hijriDate }} • {{ nextPrayer.time | date: 'dd MMM yyyy' }}
           </p>
-          <div class="tui-island__paragraph next-prayer-lbl-sec">
+          <div class="tui-island__paragraph tui-text_body-m-2 countdown-lbl">
               <span>{{ nextPrayer.inSeconds | countdown | async }}</span>
           </div>
-        </div>
-        <hr>
-        <div class="current-zone-section">
-          <p class="tui-island__paragraph current-zone-lbl">Zon semasa</p>
-          <p class="tui-island__title current-zone-lbl-sec">{{ nextPrayer.district }}</p>
         </div>
         <button
             appearance="primary"
