--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
@@ -2,11 +2,11 @@
   <table class="tui-table">
     <tbody>
       <tr class="tui-table__tr" *ngFor="let prayer of prayerInfo">
-        <td class="tui-table__td">
+        <td class="tui-table__td ">
           <tui-svg src="tuiIconClock"></tui-svg>
         </td>
-        <td class="tui-table__td tui-text_body-xl">{{ prayer.name }}</td>
-        <td class="tui-table__td tui-text_body-xl">{{ prayer.time | timeTo12Hrs }}</td>
+        <td class="tui-table__td tui-text_body-xl content-lbl">{{ prayer.name }}</td>
+        <td class="tui-table__td tui-text_body-xl content-lbl">{{ prayer.time | timeTo12Hrs }}</td>
       </tr>
     </tbody>
   </table>
