Add icon on 'tukar zon' button

--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
@@ -16,6 +16,7 @@
         <button
             appearance="primary"
             size="m"
+            [icon]="'tuiIconSliders'"
             tuiButton
             tuiHint="Tukar Zon"
             tuiHintDirection="bottom"
