--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
@@ -3,7 +3,7 @@
     <tbody>
       <tr class="tui-table__tr" *ngFor="let prayer of prayerInfo">
         <td class="tui-table__td ">
-          <tui-svg src="tuiIconClock"></tui-svg>
+          <tui-svg src="{{prayer.icon}}"></tui-svg>
         </td>
         <td class="tui-table__td tui-text_body-xl content-lbl">{{ prayer.name }}</td>
         <td class="tui-table__td tui-text_body-xl content-lbl">{{ prayer.time | timeTo12Hrs }}</td>
