- Add title on top navbar - Add styling to the top navbar

--- a/src/app/shared/menu/top-navbar/top-navbar.component.less
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.less
@@ -15,7 +15,12 @@
   text-decoration: none;
 }
 
-.t-logo-name {
+.t-logo-row {
   display: flex;
   color: white;
+  align-items: center;
+}
+
+.t-title {
+  margin: 0 auto;
 }
