--- a/src/app/shared/menu/top-navbar/top-navbar.component.html
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.html
@@ -1,10 +1,10 @@
 <header tuiNavigationHeader class="header">
   <a tuiNavigationLogo  tuilink routerLink="/" class="t-logo-link">
-    <span class="t-content">
-      <span class="t-logo-name tui-text_h3">
+    <div class="t-content">
+      <div class="t-logo-row">
         <img src="../../../../assets/mosque-logo.svg" alt="Logo" class="t-logo-img">
-        <!-- Solatku -->
-      </span>
-    </span>
+        <span class="tui-text_h5 t-title">Solatku</span>
+      </div>
+    </div>
   </a>
 </header>
