Update prayer-time-table.component.html, prayer-time-table.component.less, and prayer-time-table.component.ts to highlight the current prayer row dynamically

--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
@@ -17,6 +17,15 @@ table tr:nth-child(even) {
   background-color: #dfdfdf;
 }
 
+.highlight, .highlight td {
+  background-color: #526ed3 !important;
+  color: white;
+}
+
+// .white-text {
+//   color: white;
+// }
+
 /* For smaller screen */
 @media (max-width: 991px) {
   .tui-table {
