--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
@@ -1,12 +1,20 @@
 <section class="container" *ngIf="prayerInfo; else noData">
   <table class="tui-table">
     <tbody>
-      <tr class="tui-table__tr" *ngFor="let prayer of prayerInfo">
-        <td class="tui-table__td ">
+      <tr
+        class="tui-table__tr"
+        *ngFor="let prayer of prayerInfo; let i = index"
+        [ngClass]="{'highlight': highlightedRow[i]}"
+      >
+        <td class="tui-table__td">
           <tui-svg src="{{prayer.icon}}"></tui-svg>
         </td>
-        <td class="tui-table__td tui-text_body-xl content-lbl">{{ prayer.name }}</td>
-        <td class="tui-table__td tui-text_body-xl content-lbl">{{ prayer.time | timeTo12Hrs }}</td>
+        <td class="tui-table__td tui-text_body-xl content-lbl">
+          {{ prayer.name }}
+        </td>
+        <td class="tui-table__td tui-text_body-xl content-lbl">
+          {{ prayer.time | timeTo12Hrs }}
+        </td>
       </tr>
     </tbody>
   </table>
