Update styling for spinner component in prayer-time-base and next-prayer-info components

--- a/src/app/pages/prayer-time-base/prayer-time-base.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-base.component.html
@@ -1,17 +1,10 @@
-
-<ng-template [ngIf]="todayPrayerTimes && monthlyData">
-  <app-next-prayer-info>
-  </app-next-prayer-info>
-  <app-prayer-time-table>
-  </app-prayer-time-table>
-</ng-template>
-
-<ng-template [ngIf]="!todayPrayerTimes || !monthlyData">
-  <app-notification
-    [title]="errorTitle"
-    [message]="errorMessage"
-    [status]="'error'"
-    [size]="'l'"
-  >
-  </app-notification>
-</ng-template>
+<tui-loader
+  [ngClass]="{spinner: loading}"
+  [overlay]="true"
+  [size]="'xxl'"
+  [showLoader]="loading">
+    <app-next-prayer-info>
+    </app-next-prayer-info>
+    <app-prayer-time-table>
+    </app-prayer-time-table>
+</tui-loader>
