--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
@@ -1,42 +1,38 @@
-<section class="container" *ngIf="nextPrayer; else noData">
-  <tui-island size="m" class="t-island">
-    <div class="tui-island__content">
-      <div  class="content-container">
-        <div class="next-prayer-section">
-          <p class="tui-island__paragraph tui-text_body-l-2">Waktu seterusnya</p>
-          <h3 class="tui-text_h3 next-prayer-title">{{ nextPrayer.name }}</h3>
-          <p class="tui-island__paragraph tui-text_body-s paragraph-lbl">{{ nextPrayer.district | titlecase }}</p>
-          <p class="tui-island__paragraph tui-text_body-s paragraph-lbl">
-            {{ nextPrayer.hijriDate }} • {{ nextPrayer.time | date: 'dd MMM yyyy' }}
-          </p>
-          <div class="tui-island__paragraph tui-text_body-m-2 countdown-lbl">
-              <span>{{ nextPrayer.inSeconds | countdown: nextPrayerSecondsSubject | async}}</span>
+<tui-loader
+  [ngClass]="{spinner: loading}"
+  [overlay]="true"
+  [size]="'xxl'"
+  [showLoader]="loading">
+  <section class="container">
+    <tui-island size="m" class="t-island">
+      <div class="tui-island__content">
+        <div  class="content-container">
+          <div class="next-prayer-section">
+            <p class="tui-island__paragraph tui-text_body-l-2">Waktu seterusnya</p>
+            <h3 class="tui-text_h3 next-prayer-title">{{ nextPrayer.name }}</h3>
+            <p class="tui-island__paragraph tui-text_body-s paragraph-lbl">{{ nextPrayer.district | titlecase }}</p>
+            <p class="tui-island__paragraph tui-text_body-s paragraph-lbl">
+              {{ nextPrayer.hijriDate }} • {{ nextPrayer.time | date: 'dd MMM yyyy' }}
+            </p>
+            <div class="tui-island__paragraph tui-text_body-m-2 countdown-lbl">
+                <span>{{ nextPrayer.inSeconds | countdown: nextPrayerSecondsSubject | async}}</span>
+            </div>
           </div>
+          <button
+              appearance="primary"
+              size="m"
+              [icon]="'tuiIconSliders'"
+              tuiButton
+              tuiHint="Tukar Zon"
+              tuiHintDirection="bottom"
+              type="button"
+              class="tui-island__footer-button"
+              (click)="openDialog()"
+          >
+              Tukar Zon
+          </button>
         </div>
-        <button
-            appearance="primary"
-            size="m"
-            [icon]="'tuiIconSliders'"
-            tuiButton
-            tuiHint="Tukar Zon"
-            tuiHintDirection="bottom"
-            type="button"
-            class="tui-island__footer-button"
-            (click)="openDialog()"
-        >
-            Tukar Zon
-        </button>
       </div>
-    </div>
-  </tui-island>
-</section>
-
-<ng-template #noData>
-  <app-notification
-    [title]="errorTitle"
-    [message]="errorMessage"
-    [status]="'error'"
-    [size]="'l'"
-  >
-  </app-notification>
-</ng-template>
+    </tui-island>
+  </section>
+</tui-loader>
