--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
@@ -22,9 +22,12 @@ table tr:nth-child(even) {
   color: white;
 }
 
-// .white-text {
-//   color: white;
-// }
+.spinner {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 99;
+}
 
 /* For smaller screen */
 @media (max-width: 991px) {
