Update prayer-time-table.component.html to highlight the current prayer row dynamically

--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.html
@@ -3,7 +3,7 @@
   [overlay]="true"
   [size]="'xxl'"
   [showLoader]="loading">
-  <section class="container">
+  <section class="container" *ngIf="prayerInfo;">
     <table class="tui-table">
       <tbody>
         <tr
