--- a/src/app/shared/dialogs/zone-switcher/zone-switcher.component.html
+++ b/src/app/shared/dialogs/zone-switcher/zone-switcher.component.html
@@ -23,8 +23,9 @@
     [disabled]="!value"
     size="m"
     tuiButton
+    tuiHint="{{ 'solatku.zone_switcher_section.button' | translate }}"
     type="button"
     (click)="submit()"
 >
-    Tukar
+    {{ 'solatku.zone_switcher_section.button' | translate }}
 </button>
