--- a/src/app/shared/menu/top-navbar/top-navbar.component.less
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.less
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   height: min-content;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -23,4 +23,19 @@
 
 .t-title {
   margin: 0 auto;
+}
+
+.t-right-menu {
+  display: flex;
+  align-items: center;
+}
+
+.language-section,
+.theme-section {
+  margin-right: 1rem;
+}
+
+.language-section:hover,
+.theme-section:hover {
+  cursor: pointer;
 }
