feat: Optimize code for NextPrayerInfoComponent and TopNavbarComponent
Refactor NextPrayerInfoComponent to handle zone change more efficiently and improve performance.
Update TopNavbarComponent to handle language change more effectively and prevent unnecessary language updates.

--- a/src/app/shared/menu/top-navbar/top-navbar.component.html
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.html
@@ -24,8 +24,12 @@
       <tui-svg src="tuiIconGlobeLarge"></tui-svg>
       <ng-template #content>
         <tui-data-list (click)="changeLanguage($event)">
-          <button tuiOption value="ms">{{ 'solatku.zone_switcher_section.change_language.malay' | translate }}</button>
-          <button tuiOption value="en">{{ 'solatku.zone_switcher_section.change_language.english' | translate }}</button>
+          <button tuiOption value="ms">
+            {{ 'solatku.zone_switcher_section.change_language.malay' | translate }}
+          </button>
+          <button tuiOption value="en">
+            {{ 'solatku.zone_switcher_section.change_language.english' | translate }}
+          </button>
         </tui-data-list>
       </ng-template>
     </div>
