feat: Toggle Icon

--- a/src/app/shared/menu/top-navbar/top-navbar.component.html
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.html
@@ -12,7 +12,7 @@
       (click)="changeTheme()"
       title="{{ 'solatku.zone_switcher_section.hint.change_theme' | translate }}"
     >
-      <tui-svg src="tuiIconMoonLarge"></tui-svg>
+      <tui-svg [src]="themeIcon"></tui-svg>
     </div>
 
     <div
