update: make info island hoverable

--- a/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
+++ b/src/app/pages/prayer-time-base/next-prayer-info/next-prayer-info.component.html
@@ -4,7 +4,7 @@
   [size]="'xxl'"
   [showLoader]="loading">
   <section class="container" *ngIf="nextPrayer;">
-    <tui-island size="m" class="t-island">
+    <tui-island size="m" class="t-island" [hoverable]="true">
       <div class="tui-island__content">
         <div  class="content-container">
           <div class="next-prayer-section">
