--- a/src/app/shared/menu/top-navbar/top-navbar.component.less
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.less
@@ -31,11 +31,27 @@
 }
 
 .language-section,
+.check-update-section,
 .theme-section {
   margin-right: 1rem;
 }
 
 .language-section:hover,
+.check-update-section:hover,
 .theme-section:hover {
   cursor: pointer;
+}
+
+@media only screen and (min-width: 1024px) {
+  .check-update-section:hover,
+  .theme-section:hover {
+    rotate: 360deg;
+    transition: 1s;
+  }
+
+  .check-update-section:not(:hover),
+  .theme-section:not(:hover) {
+    rotate: 0deg;
+    transition: 1s;
+  }
 }
