--- a/src/app/shared/menu/top-navbar/top-navbar.component.html
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.html
@@ -10,7 +10,7 @@
   <div class="t-right-menu">
 
     <div class="check-update-section" (click)="openUpdatePrompt()"
-      title="{{ 'solatku.zone_switcher_section.hint.check_update' | translate }}"
+      title="{{ 'solatku.check_update_section.title' | translate }}"
     >
       <tui-svg src="tuiIconRefreshCwLarge"></tui-svg>
     </div>
