Adjust margin for both table and info component

--- a/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
+++ b/src/app/pages/prayer-time-base/prayer-time-table/prayer-time-table.component.less
@@ -1,8 +1,9 @@
 .container {
-  margin-top: 3rem;
+  margin-top: 2rem;
   max-width: max-content;
   margin-left: auto;
   margin-right: auto;
+  height: 450px;
 }
 
 .tui-table {
