chore: Update top-navbar component to add PWA install functionality

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,20 @@
 <tui-root [tuiMode]="mode" >
   <!-- Top navbar -->
-  <app-top-navbar (themeToggle)="changeTheme()" (updateToggle)="checkUpdate()"></app-top-navbar>
+  <app-top-navbar
+    [mobilePlatform]="modalPwaPlatform"
+    (themeToggle)="changeTheme()"
+    (pwaInstall)="addToHomeScreen()"
+  >
+  </app-top-navbar>
 
   <!-- Main content -->
   <main tuiNavigationMain>
     <app-prayer-time-base></app-prayer-time-base>
   </main>
+
+  <div *ngIf="modalPwaPlatform === 'ANDROID' || modalPwaPlatform === 'IOS'">
+    <pre>It's Mobile!</pre>
+  </div>
 
   <tui-theme-night *ngIf="nightMode$ | async"></tui-theme-night>
 
