--- a/src/app/shared/menu/top-navbar/top-navbar.component.html
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.html
@@ -9,12 +9,15 @@
   </a>
   <div class="t-right-menu">
 
-    <div class="check-update-section" (click)="openUpdatePrompt()"
-      title="{{ 'solatku.check_update_section.title' | translate }}"
+    <!-- Install PWA -->
+    <div *ngIf="mobilePlatform === 'ANDROID' || mobilePlatform === 'IOS'" class="check-install-section"
+      (click)="installPWA()"
+      title="{{ 'solatku.check_install_section.title' | translate }}"
     >
-      <tui-svg src="tuiIconRefreshCwLarge"></tui-svg>
+      <tui-svg src="tuiIconDownloadLarge"></tui-svg>
     </div>
 
+    <!-- Theme Switcher -->
     <div class="theme-section"
       (click)="changeTheme()"
       title="{{ 'solatku.zone_switcher_section.hint.change_theme' | translate }}"
@@ -22,6 +25,7 @@
       <tui-svg [src]="themeIcon"></tui-svg>
     </div>
 
+    <!-- Language Switcher -->
     <div
       tuiDropdownHover
       [tuiDropdown]="content"
