--- a/src/app/shared/menu/top-navbar/top-navbar.component.html
+++ b/src/app/shared/menu/top-navbar/top-navbar.component.html
@@ -10,7 +10,7 @@
   <div class="t-right-menu">
 
     <!-- Install PWA -->
-    <div *ngIf="mobilePlatform === 'ANDROID' || mobilePlatform === 'IOS'" class="check-install-section"
+    <div *ngIf="isMobile" class="check-install-section"
       (click)="installPWA()"
       title="{{ 'solatku.check_install_section.title' | translate }}"
     >
