--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -5,6 +5,23 @@
   }
 }
 
+.main-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+.main-content {
+  padding-bottom: 2.5rem;
+}
+
+app-footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  background-color: #f0f2f5;
+}
+
 .connection-bar {
   position: fixed;
   bottom: -100%;
