--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
     </div>
 
    <!-- Footer -->
-   <app-footer></app-footer>
+   <app-footer [ngClass]="{'footer-white': mode !== 'onDark', 'footer-dark': mode === 'onDark'}"></app-footer>
   </div>
 </tui-root>
