--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -19,9 +19,16 @@ app-footer {
   bottom: 0;
   width: 100%;
   text-align: center;
+}
+
+.footer-white {
   background-color: #f0f2f5;
 }
 
+.footer-dark {
+  background-color: #2c2c2c;
+  color: rgba(255, 255, 255, 0.7);
+}
 .connection-bar {
   position: fixed;
   bottom: -100%;
