🪲Fix: Footer not working properly when change theme - Fix if condition logic on footer selector. - Update styling for footer content's link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,6 +26,6 @@
     </div>
 
    <!-- Footer -->
-   <app-footer [ngClass]="{'footer-white': mode !== 'onDark', 'footer-dark': mode === 'onDark'}"></app-footer>
+   <app-footer [ngClass]="{'footer-white': mode === null, 'footer-dark': mode === 'onDark'}"></app-footer>
   </div>
 </tui-root>
