--- a/src/app/shared/menu/footer/footer.component.html
+++ b/src/app/shared/menu/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div>
     <p>
       © {{ currentYear }} Solatku by
-      <a href="https://github.com/farithadnan/" target="_blank">Farith Adnan</a>.
+      <a class="dev-link" href="https://github.com/farithadnan/" target="_blank">Farith Adnan</a>.
     </p>
 </div>
